# optical-simulation

./: CMakeLists.txt
Phys/: Cheb.h  CircleDifr.h  Edge.h  FrenelS.h  GapDifr.h  main.cpp
_phys/: CircleDifr.h  Edge.h  FrenelC.h  GapDifr.h  Parametrs.h  main_.cpp
interface/: interface.cpp  interface.h  interface.ui  main.qml  qml.qrc
physics/: Fourier.cpp  Fourier.h  RectObstacle.cpp  RectObstacle.h  Transparency.cpp  Transparency.h  parameters.h
src/: main.cpp
src/sfml/: FieldCanvas.cpp  FieldCanvas.h  FourierCanvas.cpp  FourierCanvas.h  ImageCanvas.cpp  ImageCanvas.h  QSFMLCanvas.cpp  QSFMLCanvas.h
util/waveRGB/: waveRGB.cpp  waveRGB.h
